# gram-job-board

./: Cargo.toml  README.MD
migrations/: 20231125180259_gram_job_board.sql
src/: lib.rs  main.rs
src/commands/: mod.rs
src/commands/delete/: mod.rs
src/commands/edits/: checkpoint.rs  cmd_checkpoint.rs  codename.rs  company.rs  location.rs  mod.rs  salary.rs  start.rs  title.rs
src/commands/myjobs/: mod.rs
src/commands/posts/: company.rs  location.rs  mod.rs  salary.rs  start.rs  title.rs
src/resources/: home.rs
templates/: index.html
