[package]
name = "gram-job-board"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.1"
axum = "0.6.20"
shuttle-axum = "0.33.0"
shuttle-runtime = "0.33.0"
shuttle-secrets = "0.33.0"
shuttle-shared-db = { version = "0.33.0", features = ["postgres-rustls"] }
sqlx = { version = "0.7.3", features = ["macros"] }
teloxide = { version = "0.12.2", features = ["macros"] }
tokio = { version = "1.28.2", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.4.0", features = ["fs"] }
tracing = "0.1.40"
